# contenttool

./: .env.example  .gitignore  README.md
apps/pipelines/: .dockerignore  .env.example  Dockerfile  __main__.py  brief_generator.py  config.py  content_generator.py  db.py  meta.py  models.py  orchestrator.py  pyproject.toml  requirements.txt  server.py  tiktok.py  youtube.py
apps/web/: package-lock.json  package.json  vercel.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(internal)/: layout.tsx
apps/web/src/app/(internal)/jobs/[id]/: page.tsx
apps/web/src/app/(internal)/jobs/new/: page.tsx
apps/web/src/app/(portal)/: layout.tsx
apps/web/src/app/(portal)/review/: page.tsx
apps/web/src/app/(portal)/review/[token]/: page.tsx
apps/web/src/app/api/client-tokens/: route.ts
apps/web/src/app/api/cron/run-pipelines/: route.ts
apps/web/src/app/api/health/: route.ts
apps/web/src/app/api/jobs/: route.ts
apps/web/src/app/api/jobs/[id]/: route.ts
apps/web/src/app/api/suggest-targeting/: route.ts
apps/web/src/app/api/trends/: route.ts
apps/web/src/app/jobs/[id]/: page.tsx
apps/web/src/app/jobs/new/: page.tsx
apps/web/src/app/review/: page.tsx
apps/web/src/app/review/[id]/: page.tsx
apps/web/src/lib/: approval-machine.ts  review-auth.ts
apps/web/src/lib/supabase/: admin.ts  client.ts  server.ts
supabase/: config.toml
supabase/migrations/: 20260401000001_create_phase1_schema.sql  20260401000002_add_competitor_benchmark.sql  20260401000002_create_approval_workflow.sql  20260401000003_create_client_tokens.sql
(+3 files in other folders)
