[project]
name = "contenttool-pipelines"
version = "0.1.0"
description = "Data extraction and content intelligence pipelines"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "anthropic>=0.40,<1",
    "supabase>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "tenacity>=8.2,<9",
    "pydantic>=2.0,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
pipeline = "pipelines.__main__:main"
